# leaderboard_server

./: .env  Cargo.toml  README.md
src/: leaderboard.rs  main.rs  score.rs
src/database/: mod.rs  request_error.rs  requests.rs  score.rs
src/database_keys/: generate.rs  guard.rs  mod.rs
src/tests/: mod.rs
