[package]
name = "leaderboard_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }

# [dependencies.sqlx]
# version = "0.5.1"
# default-features = false
# features = ["macros", "offline", "migrate"]