[package]
name = "leaderboard_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = "1.12.0"
dotenv = "0.15.0"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "offline", "any", "postgres", "mysql", "sqlite", "mssql"]